新增角色列表接口以及文档
