# app/controller/v1/role.go
@@ -1,0 +1,52 @@
+package v1
+
+import (
+	"gin/app/facade"
+	"gin/app/request"
+	"gin/app/service"
+	"gin/common/base"
+	"gin/common/errcode"
+	"gin/pkg/serviceprovider/lang"
+	"github.com/gin-gonic/gin"
+)
+
+type RoleController struct {
+	base.BaseController
+	service service.RoleService
+}
+
+// List 列表
+// @Tags 角色管理
+// @Summary 列表
+// @Description 角色列表
+// @Param token header string true "认证Token"
+// @Param page query string true "页码"
+// @Param pageSize query string true "分页大小"
+// @Param notPage query string true "是否不分页"
+// @Success 200 {object} errcode.SuccessResponse{data=request.PageData{list=[]model.Roles}} "成功"
+// @Failure 400 {object} errcode.ArgsErrorResponse "参数错误"
+// @Failure 500 {object} errcode.SystemErrorResponse "系统错误"
+// @Router /api/v1/role [get]
+func (s *RoleController) List(c *gin.Context) {
+	var (
+		ctx = c.Request.Context()
+		req request.Roles
+	)
+
+	s.service.WithContext(ctx)
+
+	// 绑定参数并验证
+	err := facade.Request[any]().BindValidate(c, &req, "")
+	if err != nil {
+		s.Response.Error(c, errcode.ArgsError().WithMsg(err.Error()))
+		return
+	}
+
+	res, err := s.service.List(req)
+	if err != nil {
+		s.Response.Error(c, errcode.SystemError().WithMsg(lang.Trans(ctx, err.Error(), nil)))
+		return
+	}
+
+	s.Response.Success(c, errcode.Success().WithData(res))
+}
