# docs/swagger.json
@@ -13,6 +13,91 @@
     },
     "host": "127.0.0.1:8080",
     "paths": {
+        "/api/v1/captcha": {
+            "get": {
+                "description": "获取验证码",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "登录相关"
+                ],
+                "summary": "获取验证码",
+                "responses": {
+                    "200": {
+                        "description": "成功返回\" Example({\"code\":0,\"msg\":\"Success\",\"data\":[]})",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/errcode.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.CaptchaResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "系统错误\" Example({\"code\":500,\"msg\":\"系统错误\",\"data\":[]})",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.SystemErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "校验验证码",
+                "tags": [
+                    "登录相关"
+                ],
+                "summary": "校验验证码",
+                "parameters": [
+                    {
+                        "description": "验证码校验参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CheckCaptcha"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/errcode.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.Token"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.ArgsErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "description": "用户登录",
@@ -185,6 +270,92 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/v1.Token"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.ArgsErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "系统错误",
+                        "schema": {
+                            "$ref": "#/definitions/errcode.SystemErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/role": {
+            "get": {
+                "description": "角色列表",
+                "tags": [
+                    "角色管理"
+                ],
+                "summary": "列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "认证Token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "分页大小",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "是否不分页",
+                        "name": "notPage",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/errcode.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/request.PageData"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "list": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/model.Roles"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
                                         }
                                     }
                                 }
@@ -681,10 +852,10 @@
                     }
                 },
                 "meta": {
-                    "description": "meta",
+                    "description": "菜单元数据",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/model.Meta"
+                            "$ref": "#/definitions/model.MenuMeta"
                         }
                     ]
                 },
@@ -781,7 +952,7 @@
                 }
             }
         },
-        "model.Meta": {
+        "model.MenuMeta": {
             "type": "object",
             "properties": {
                 "authBtnList": {
@@ -791,34 +962,46 @@
                         "$ref": "#/definitions/model.MenuActions"
                     }
                 },
+                "createdAt": {
+                    "type": "string"
+                },
                 "icon": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "isAffix": {
-                    "type": "boolean"
+                    "type": "integer"
                 },
                 "isHide": {
-                    "type": "boolean"
+                    "type": "integer"
                 },
                 "isIframe": {
-                    "description": "是否内嵌，开启条件，`1、isIframe:true 2、isLink：链接地址不为空`",
-                    "type": "boolean"
+                    "description": "是否内嵌,开启条件`1 isIframe:true 2 isLink:链接地址不为空`",
+                    "type": "integer"
                 },
                 "isKeepAlive": {
-                    "type": "boolean"
+                    "type": "integer"
                 },
                 "isLink": {
-                    "description": "外链/内嵌时链接地址（http:xxx.com），开启外链条件，`1、isLink: 链接地址不为空`",
+                    "description": "外链/内嵌时链接地址(http:xxx.com),开启外链条件`1 isLink:链接地址不为空`",
                     "type": "string"
                 },
+                "menuId": {
+                    "type": "integer"
+                },
                 "roles": {
-                    "description": "权限标识，取角色管理",
+                    "description": "权限标识,取角色管理",
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "$ref": "#/definitions/model.RoleMenus"
                     }
                 },
                 "title": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -862,6 +1045,29 @@
                     "type": "string"
                 },
                 "roleId": {
+                    "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Roles": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "integer"
                 },
                 "updatedAt": {
@@ -958,6 +1164,21 @@
                 }
             }
         },
+        "request.CheckCaptcha": {
+            "type": "object",
+            "required": [
+                "captchaId",
+                "code"
+            ],
+            "properties": {
+                "captchaId": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                }
+            }
+        },
         "request.PageData": {
             "type": "object",
             "properties": {
@@ -1012,10 +1233,18 @@
         "request.UserLogin": {
             "type": "object",
             "required": [
+                "captchaId",
+                "code",
                 "password",
                 "username"
             ],
             "properties": {
+                "captchaId": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string",
                     "example": "123456"
@@ -1050,6 +1279,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.CaptchaResponse": {
+            "type": "object",
+            "properties": {
+                "captchaId": {
+                    "type": "string"
+                },
+                "captchaImage": {
                     "type": "string"
                 }
             }
